Add EmbedDescription Scripting

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -61,21 +61,21 @@
   "vote_select": "Choose who you want to vote against...",
   "role_mafia_name": "Mafia",
   "role_mafia_placeHolder": "Choose your victim...",
-  "role_mafia_description": "%KILL AND SURVIVE! :skull_crossbones:\nEvery night the mafia kills one player for whom its members give the most votes (in case of a tie the player is chosen at random). But remember: the victim may be cured by the doctor.\nThe mafia wins if it is at least half of all active players.% + ({r:maniac:count} > 0 ? % Exception: if there are two players left — a mafia member and the maniac — the maniac wins.% : %%) + ({r:mafia:count} > 1 ? %\nYour teammates: % + %{oPlayersTRole}% : %%)",
+  "role_mafia_description": "%KILL AND SURVIVE!\n:skull_crossbones: Every night the mafia kills one player for whom its members give the most votes (in case of a tie the player is chosen at random). But remember: the victim may be cured by the doctor.\n:trophy: The mafia wins if it is at least half of all active players.% + ({r:maniac:count} > 0 ? % Exception: if there are two players left — a mafia member and the maniac — the maniac wins.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette: Your teammates: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Maniac",
   "role_killer_placeHolder": "Choose your victim...",
-  "role_killer_description": "%KILL EVERYONE AND SURVIVE! :axe:\nOnce every two nights you kill any player you want. But remember: the victim may be cured by the doctor.\nYou win if no more than one player besides you remains in the city. Spare nobody!%",
+  "role_killer_description": "%KILL EVERYONE AND SURVIVE!\n:axe: Once every two nights you kill any player you want. But remember: the victim may be cured by the doctor.\n:trophy: You win if no more than one player besides you remains in the city. Spare nobody!%",
   "role_peaceful_name": "Innocent",
-  "role_peaceful_description": "%Your goal is to save the city from criminals! :dove:\nReveal the identities of the villains and achieve their expulsion from the city.\nThe innocents win if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_peaceful_description": "%Your goal is to save the city from criminals!\n:scales: Reveal the identities of the villains and achieve their expulsion from the city.\n:trophy: The innocents win if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_doctor_name": "Doctor",
   "role_doctor_placeHolder": "Choose who you want to heal...",
-  "role_doctor_description": "%You save people's lives! :heart:\nEvery night you heal one player. If this player is chosen by the criminals, he or she will stay alive.\nYou win with the innocents if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_doctor_description": "%You save people's lives! :heart:\n:pill: Every night you heal one player. If this player is chosen by the criminals, he or she will stay alive.\n:trophy: You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_police_name": "Detective",
   "role_police_placeHolder": "Choose who you want to check...",
-  "role_police_description": "%You investigate crimes in the city! :mag:\nEvery night you check one player and find out if he or she belongs to the mafia.\nYou win with the innocents if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_police_description": "%You investigate crimes in the city! :oncoming_police_car:\n:mag_right: Every night you check one player and find out if he or she belongs to the mafia.\n:trophy: You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_mistress_name": "Fancy woman",
   "role_mistress_placeHolder": "Choose who you want to visit...",
-  "role_mistress_description": "You bring love to this world! And what is love — who knows... :kiss:\nEvery night you visit one of the players. The next day, this player can't be voted out.\nYou win with the innocents if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!",
+  "role_mistress_description": "%You bring love to this world! And what is love — who knows... :kiss:\n:strawberry: Every night you visit one of the players. The next day, this player can't be voted out.\n:trophy: You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
 
   "condition_mafiaWin_name": "Mafia victory condition",
   "condition_mafiaWin_WinEmbedTitle": "The mafia has won!",
@@ -111,6 +111,8 @@
   "profile_button_custom": "Custom",
   "profile_button_news": "News Notifications",
 
+  "create_condition_error_premium": "Sorry, you don't have Premium to create custom roles and conditions!",
+  "create_condition_error_number": "Sorry, you can't create more than 21 conditions!",
   "create_condition_title1": "Condition Creation",
   "create_condition_conditionName_label": "Name",
   "create_condition_conditionName_placeHolder": "My mafia victory condition",
