--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -61,21 +61,21 @@
   "vote_select": "Выберите, против кого хотите проголосовать...",
   "role_mafia_name": "Мафия",
   "role_mafia_placeHolder": "Выберите жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ! :skull_crossbones:\nКаждую ночь мафия убивает одного игрока, за которого её члены отдают наибольшее число голосов (в случае равенства игрок выбирается случайным образом). Но помните: жертву может вылечить доктор.\nМафия побеждает, если составляет не менее половины всех активных игроков.% + ({r:maniac:count} > 0 ? % Исключение: если осталось двое игроков — представитель мафии и маньяк — побеждает маньяк..% : %%) + ({r:mafia:count} > 1 ? %\nС вами в команде: % + %{oPlayersTRole}% : %%)",
+  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ!\n:skull_crossbones: Каждую ночь мафия убивает одного игрока, за которого её члены отдают наибольшее число голосов (в случае равенства игрок выбирается случайным образом). Но помните: жертву может вылечить доктор.\n:trophy: Мафия побеждает, если составляет не менее половины всех активных игроков.% + ({r:maniac:count} > 0 ? % Исключение: если осталось двое игроков — представитель мафии и маньяк — побеждает маньяк..% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette: С вами в команде: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Маньяк",
   "role_killer_placeHolder": "Выберите жертву...",
-  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ! :axe:\nРаз в две ночи вы убиваете любого игрока, которого захотите. Но помните: жертву может вылечить доктор.\nВы побеждаете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%",
+  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ!\n:axe: Раз в две ночи вы убиваете любого игрока, которого захотите. Но помните: жертву может вылечить доктор.\n:trophy: Вы побеждаете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%",
   "role_peaceful_name": "Мирный",
-  "role_peaceful_description": "%Ваша цель — защитить город от преступников! :dove:\nРаскройте личности злодеев и добейтесь их изгнания из города.\nМирные побеждают, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_peaceful_description": "%Ваша цель — защитить город от преступников!\n:scales: Раскройте личности злодеев и добейтесь их изгнания из города.\n:trophy: Мирные побеждают, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
   "role_doctor_name": "Доктор",
   "role_doctor_placeHolder": "Выберите, кого хотите вылечить...",
-  "role_doctor_description": "%Вы спасаете жизни людей! :heart:\nКаждую ночь вы лечите одного игрока. Если этого игрока выбрали преступники, он не пострадает.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_doctor_description": "%Вы спасаете жизни людей! :heart:\n:pill: Каждую ночь вы лечите одного игрока. Если этого игрока выбрали преступники, он не пострадает.\n:trophy: Вы побеждаете вместе с мирными, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
   "role_police_name": "Детектив",
   "role_police_placeHolder": "Выберите, кого хотите проверить...",
-  "role_police_description": "%Вы расследуете преступления в городе! :mag:\nКаждую ночь вы проверяете одного игрока и выясняете, принадлежит ли он к мафии.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_police_description": "%Вы расследуете преступления в городе! :oncoming_police_car:\n:mag_right: Каждую ночь вы проверяете одного игрока и выясняете, принадлежит ли он к мафии.\n:trophy: Вы побеждаете вместе с мирными, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
   "role_mistress_name": "Ночная бабочка",
   "role_mistress_placeHolder": "Выберите, к кому хотите наведаться...",
-  "role_mistress_description": "%Вы несёте любовь в этот мир! А что есть любовь — кто знает... :kiss:\nКаждую ночь вы наведываетесь к одному из игроков. На следующий день этот игрок не может быть изгнан голосованием.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_mistress_description": "%Вы несёте любовь в этот мир! А что есть любовь — кто знает... :kiss:\n:strawberry: Каждую ночь вы наведываетесь к одному из игроков. На следующий день этот игрок не может быть изгнан голосованием.\n:trophy: Вы побеждаете вместе с мирными, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
 
   "condition_mafiaWin_name": "Условие победы мафии",
   "condition_mafiaWin_WinEmbedTitle": "Мафия победила!",
@@ -111,6 +111,8 @@
   "profile_button_custom": "Кастомизация",
   "profile_button_news": "Уведомления о новостях",
 
+  "create_condition_error_premium": "Извините, у вас нет Premium, чтобы создавать собственные роли и условия!",
+  "create_condition_error_number": "Извините, вы не можете создать больше 21 условия!",
   "create_condition_title1": "Создание условия",
   "create_condition_conditionName_label": "Название",
   "create_condition_conditionName_placeHolder": "Моё условие победы мафии",
