--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -61,21 +61,21 @@
   "vote_select": "Оберіть, проти кого хочете проголосувати...",
   "role_mafia_name": "Мафія",
   "role_mafia_placeHolder": "Оберіть жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ! :skull_crossbones:\nЩоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадко). Але пам'ятайте: жертву може вилікувати доктор.\nМафія перемагає, якщо складає не менше половини всіх активних гравців.% + ({r:maniac:count} > 0 ? % Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.% : %%) + ({r:mafia:count} > 1 ? %\nЗ вами в команді: % + %{oPlayersTRole}% : %%)",
+  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ!\n:skull_crossbones: Щоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадко). Але пам'ятайте: жертву може вилікувати доктор.\n:trophy: Мафія перемагає, якщо складає не менше половини всіх активних гравців.% + ({r:maniac:count} > 0 ? % Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette: З вами в команді: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Маніяк",
   "role_killer_placeHolder": "Оберіть жертву...",
-  "role_killer_description": "%УБИЙТЕ ВСІХ І ВИЖИВІТЬ! :axe:\nРаз на дві ночі ви вбиваєте будь-якого гравця, якого забажаєте. Але пам'ятайте: жертву може вилікувати доктор.\nВи перемагаєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%",
+  "role_killer_description": "%УБИЙТЕ ВСІХ І ВИЖИВІТЬ!\n:axe: Раз на дві ночі ви вбиваєте будь-якого гравця, якого забажаєте. Але пам'ятайте: жертву може вилікувати доктор.\n:trophy: Ви перемагаєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%",
   "role_peaceful_name": "Мирний",
-  "role_peaceful_description": "%Ваша мета — захистити місто від злочинців! :dove:\nРозкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\nМирні перемагають, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_peaceful_description": "%Ваша мета — захистити місто від злочинців!\n:scales: Розкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\n:trophy: Мирні перемагають, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
   "role_doctor_name": "Доктор",
   "role_doctor_placeHolder": "Оберіть, кого хочете вилікувати...",
-  "role_doctor_description": "%Ви рятуєте життя людей! :heart:\nЩоночі ви лікуєте одного гравця. Якщо цього гравця обрали злочинці, він не постраждає.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_doctor_description": "%Ви рятуєте життя людей! :heart:\n:pill: Щоночі ви лікуєте одного гравця. Якщо цього гравця обрали злочинці, він не постраждає.\n:trophy: Ви перемагаєте разом із мирними, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
   "role_police_name": "Детектив",
   "role_police_placeHolder": "Оберіть, кого хочете перевірити...",
-  "role_police_description": "%Ви розслідуєте злочини в місті! :mag:\nЩоночі ви перевіряєте одного гравця та з'ясовуєте, чи належить він до мафії.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_police_description": "%Ви розслідуєте злочини в місті! :oncoming_police_car:\n:mag_right: Щоночі ви перевіряєте одного гравця та з'ясовуєте, чи належить він до мафії.\n:trophy: Ви перемагаєте разом із мирними, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
   "role_mistress_name": "Повія",
   "role_mistress_placeHolder": "Оберіть, до кого хочете навідатися...",
-  "role_mistress_description": "Ви несете любов у цей світ! А що є любов - хто знає... :kiss:\nЩоночі ви навідуєтеся до одного з гравців. Наступного дня цей гравець не може бути вигнаний голосуванням.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!",
+  "role_mistress_description": "%Ви несете любов у цей світ! А що є любов - хто знає... :kiss:\n:strawberry: Щоночі ви навідуєтеся до одного з гравців. Наступного дня цей гравець не може бути вигнаний голосуванням.\n:trophy: Ви перемагаєте разом із мирними, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
 
   "condition_mafiaWin_name": "Умова перемоги мафії",
   "condition_mafiaWin_WinEmbedTitle": "Мафія перемогла!",
@@ -111,6 +111,8 @@
   "profile_button_custom": "Кастомізація",
   "profile_button_news": "Повідомлення про новини",
 
+  "create_condition_error_premium": "Вибачте, у вас немає Premium, щоб створювати власні ролі та умови!",
+  "create_condition_error_number": "Вибачте, ви не можете створити більше, ніж 21 умову!",
   "create_condition_title1": "Створення умови",
   "create_condition_conditionName_label": "Назва",
   "create_condition_conditionName_placeHolder": "Моя умова перемоги мафії",
